--- a/point/moisAvecPointer/index.html
+++ b/point/moisAvecPointer/index.html
@@ -13,22 +13,24 @@
     <script src="https://unpkg.com/aframe-event-set-component@4.0.1/dist/aframe-event-set-component.min.js"></script>
     <script src="components/ui-widget.js"></script>
     <script src="components/phase-shift.js"></script>
-    <script src="components/changement-outil.js"></script>
+    <!--<script src="components/changement-outil.js"></script>-->
+    <script src="components/bouton-generate.js"></script>
     <script src="components/horloge.js"></script>
     <script src="components/jour-clickable.js"></script>
     <script src="components/lecture-cube.js"></script>
     <script src="components/am-pm.js"></script>
+    <script src="components/lumiere-nuit.js"></script>
   </head>
   <body>
     <a-scene stats physics environment="preset:forest; shadow:false;
-                                        skyType:atmosphere;
-                                        lightPosition: [0, 5, 0]">
+                                        skyType:atmosphere;">
 
       <a-assets>
         <a-mixin id="mypoint" phase-shift
                  raycaster="showLine:true;far:15;interval:25;
                             objects:.choixJour, .cube,
-                                    .lecteurCube, .changement-heure;"
+                                    .lecteurCube, .horloge,
+                                    #graph;"
                  super-hands="colliderEvent:raycaster-intersection;
                               colliderEventProperty:els;
                               colliderEndEvent:raycaster-intersection-cleared;
@@ -67,6 +69,12 @@
         <a-mixin id="fade" attribute="material.opacity" direction="alternate"
                  begin="playFade" repeat="0"
                  from="0.2" to="1" dur="500"></a-mixin>
+        <!-- Bouton generate -->
+        <a-mixin id="btn-generate" position="0 0.02 0"
+                 geometry="primitive: cylinder;
+                           radius: 0.1; height: 0.025;
+                           segmentsHeight: 1;"
+                 material="src:img/graph/generate.png"></a-mixin>
         <!-- Textures jour -->
         <img id="t_1" src="img/jour/1.png">
         <img id="t_2" src="img/jour/2.png">
@@ -136,7 +144,7 @@
 
       <!-- Horloge -->
       <a-entity id="horloge" hoverable
-                horloge data-heure-choisisse="" data-am-pm="AM"
+                horloge data-heure-choisisse="" data-am-pm=""
                 event-set__hover-start="material.opacity: 0.2;"
                 event-set__hover-end="material.opacity:1;"
                 scale="0.8 0.8 0.8" position="1.5 1.5 -1"
@@ -145,32 +153,27 @@
                   aiguille-horloge clickable hoverable ui-rotary></a-entity>
         <a-entity id="fondHorloge" geometry="primitive: cylinder; radius:0.59; height:0.045;"
                   material="color:#FFFFFF;"></a-entity>
+        <a-entity geometry="width: 3; height: 3; depth: 0.32"
+                  position="0 -0.19 0.468" rotation="90 90 90"
+                  material="color: white;" static-body></a-entity>
         <!--<a-entity geometry="primitive: cylinder; radius:0.1; height:0.045;"
                   material="color:grey;" position="0 0.05 0"></a-entity>-->
-        <!-- Les colliders
-        <a-entity class="changement-heure" material="color:blue;"
-                  position="0 0.1 0" geometry="primitive: cylinder;
-                                               radius:0.59; height:0.045;
-                                               thetaLength:180;"></a-entity>
-        <a-entity class="changement-heure"
-                  material="color:red;" position="0 0.1 0"
-                  geometry="primitive: cylinder;
-                            radius:0.59; height:0.045;
-                            thetaLength:180;thetaStart:180;"></a-entity>-->
 
         <!-- Les aiguilles
         <a-entity id="monAiguille" mixin="aiguille"
                   geometry="height: 0.4;"
                   position="0 0.048 -0.217"></a-entity>-->
         <a-entity mixin="aiguille" position="0 0.034 -0.217"></a-entity>
+
+        <!--  Choisir Am ou Pm avec la switch -->
         <a-entity am-pm ui-toggle rotation="0 -90 0"
                   position="-0.008 0.001 1.165" scale="2 2 2">
-                  <a-entity text="value:AM;align:center;color:#000000;width:4"
+                  <a-entity text="value:AM;align:center;color:#f4f4f4;width:2.5"
                             rotation="270 90 0"
-                            position="-0.174 0.02 -0.23"></a-entity>
-                  <a-entity text="value:PM;align:center;color:#000000;width:4"
+                            position="0 0 -0.23"></a-entity>
+                  <a-entity text="value:PM;align:center;color:#f4f4f4;width:2.5"
                             rotation="270 90 0"
-                            position="0.174 0.02 -0.23"></a-entity>
+                            position="0 0 0.23"></a-entity>
         </a-entity>
         <!-- Les chiffres -->
         <a-entity id="lesChiffres">
@@ -333,9 +336,130 @@
                   material="color: white;" static-body></a-entity>
       </a-entity>
 
+      <!-- Le bouton graphe -->
+      <a-entity geometry="primitive:box;width: 0.3; depth: 0.3"
+                material="color:#ffffff" position="-1 0.5 2" rotation="0 270 0">
+        <a-entity data-pret-generate="false"
+                  bouton-generate position="0 0.5 0"
+                  ui-button="baseColor: #ffffff;
+                             top:btn-generate;
+                            pressed:btn-generate,offset"></a-entity>
+      </a-entity>
+
+      <!-- Ensemble graphe -->
+      <a-entity id="graph" position="0 0 1" grabbable stretchable >
+
+        <!-- le graphe -->
+        <a-entity position="0 0 4" scale="2 2 2" rotation="0 90 0">
+
+          <!-- Lignes blanches -->
+          <a-entity>
+            <a-entity line__a="start: -.8, 0.25, .8;  end: -.8 0.25 -.8; color: white"
+                      line__b="start: -.8, 0.5, .8;  end: -.8 0.5 -.8; color: white"
+                      line__c="start: -.8, 0.75, .8; end: -.8 0.75 -.8; color: white"
+                      line__d="start: -.8, 1, .8;    end: -.8 1 -.8; color: white"
+                      line__e="start: -.8, 0.25, -.8;  end: .8 0.25 -.8; color: white"
+                      line____f="start: -.8, 0.5, -.8;  end: .8 0.5 -.8; color: white"
+                      line__g="start: -.8, 0.75, -.8; end: .8 0.75 -.8; color: white"
+                      line__h="start: -.8, 1, -.8;    end: .8 1 -.8; color: white"
+                      line__i="start: .8, 0.25, .8; end: .8 0.25 -.8; color: white"
+                      line__j="start: .8, 0.5, .8; end: .8 0.5 -.8; color: white"
+                      line__k="start: .8, 0.75, .8; end: .8 0.75 -.8; color: white"
+                      line__l="start: .8, 1, .8; end: .8 1 -.8; color: white"></a-entity>
+            <a-text value="0.25"  color="white"  width="5" wrap-count="180"  position="-.8, 0.25, 1" rotation="0 90 0" ></a-text>
+            <a-text value="0.25"  color="white"  width="5" wrap-count="180"  position="-.8, 0.25, 1" rotation="0 -90 0" ></a-text>
+            <a-text value="0.5"  color="white"  width="5" wrap-count="180"  position="-.8, 0.5, 1" rotation="0 90 0" ></a-text>
+            <a-text value="0.5"  color="white"  width="5" wrap-count="180"  position="-.8, 0.5, 1" rotation="0 -90 0" ></a-text>
+            <a-text value="0.75"  color="white"  width="5" wrap-count="180"  position="-.8, 0.75, 1" rotation="0 90 0" ></a-text>
+            <a-text value="0.75"  color="white"  width="5" wrap-count="180"  position="-.8, 0.75, 1" rotation="0 -90 0" ></a-text>
+            <a-text value="1"  color="white"  width="5" wrap-count="180"  position="-.8, 1, 1" rotation="0 90 0" ></a-text>
+            <a-text value="1"  color="white"  width="5" wrap-count="180"  position="-.8, 1, 1" rotation="0 -90 0" ></a-text>
+            <a-text value="Percentage of Bachelors accorded to Women"  color="white"  width="5" wrap-count="180"  position="-.8, 0.25, 1.2" rotation="0 90 90" ></a-text>
+            <a-text value="Percentage of Bachelors accorded to Women"  color="white"  width="5" wrap-count="180"  position="-.8, 0.25, 1.2" rotation="0 -90 90" ></a-text>
+          </a-entity>
+
+          <!-- Ligne noir au sol -->
+          <a-entity>
+            <a-entity line__a="start: -.8, 0.05, -.8; end: .8 0.05 -.8; color: black"
+                      line__b="start: -.8, 0.05, -.7; end: .8 0.05 -.7; color: black"
+                      line__c="start: -.8, 0.05, -.6; end: .8 0.05 -.6; color: black"
+                      line__d="start: -.8, 0.05, -.5; end: .8 0.05 -.5; color: black"
+                      line__e="start: -.8, 0.05, -.4; end: .8 0.05 -.4; color: black"
+                      line__f="start: -.8, 0.05, -.3; end: .8 0.05 -.3; color: black"
+                      line__g="start: -.8, 0.05, -.2; end: .8 0.05 -.2; color: black"
+                      line__h="start: -.8, 0.05, -.1; end: .8 0.05 -.1; color: black"
+                      line__i="start: -.8, 0.05, 0;   end: .8 0.05 0;   color: black"
+                      line__j="start: -.8, 0.05, .8; end: .8 0.05 .8; color: black"
+                      line__k="start: -.8, 0.05, .7; end: .8 0.05 .7; color: black"
+                      line__l="start: -.8, 0.05, .6; end: .8 0.05 .6; color: black"
+                      line__m="start: -.8, 0.05, .5; end: .8 0.05 .5; color: black"
+                      line__n="start: -.8, 0.05, .4; end: .8 0.05 .4; color: black"
+                      line__o="start: -.8, 0.05, .3; end: .8 0.05 .3; color: black"
+                      line__p="start: -.8, 0.05, .2; end: .8 0.05 .2; color: black"
+                      line__q="start: -.8, 0.05, .1; end: .8 0.05 .1; color: black"
+                      line__r="start: -.8, 0.05, -.8;  end: -.8 0.05 .8; color: black"
+                      line__s="start: -.7, 0.05, -.8;  end: -.7 0.05 .8; color: black"
+                      line__t="start: -.6, 0.05, -.8;  end: -.6 0.05 .8; color: black"
+                      line__u="start: -.5, 0.05, -.8;  end: -.5 0.05 .8; color: black"
+                      line__v="start: -.4, 0.05, -.8;  end: -.4 0.05 .8; color: black"
+                      line__w="start: -.3, 0.05, -.8;  end: -.3 0.05 .8; color: black"
+                      line__y="start: -.2, 0.05, -.8;  end: -.2 0.05 .8; color: black"
+                      line__z="start: -.1, 0.05, -.8;  end: -.1 0.05 .8; color: black"
+                      line__aa="start: 0, 0.05, -.8;    end: 0 0.05 .8; color: black"
+                      line__ba="start: .8, 0.05, -.8;  end: .8 0.05 .8; color: black"
+                      line__ca="start: .7, 0.05, -.8;  end: .7 0.05 .8; color: black"
+                      line__da="start: .6, 0.05, -.8;  end: .6 0.05 .8; color: black"
+                      line__ea="start: .5, 0.05, -.8;  end: .5 0.05 .8; color: black"
+                      line__fa="start: .4, 0.05, -.8;  end: .4 0.05 .8; color: black"
+                      line__ga="start: .3, 0.05, -.8;  end: .3 0.05 .8; color: black"
+                      line__ha="start: .2, 0.05, -.8;  end: .2 0.05 .8; color: black"
+                      line__ja="start: .1, 0.05, -.8;  end: .1 0.05 .8; color: black"></a-entity>
+          </a-entity>
+
+          <!-- Le texte pour diamètre -->
+          <a-entity>
+            <a-text value="1970" color="white" width="5" wrap-count="180" position="-.95 .03 .8" rotation="-90 0 0" ></a-text>
+            <a-text value="1972" color="white" width="5" wrap-count="180" position="-.95 .03 .72" rotation="-90 0 0" ></a-text>
+            <a-text value="1974" color="white" width="5" wrap-count="180" position="-.95 .03 .64" rotation="-90 0 0" ></a-text>
+            <a-text value="1976" color="white" width="5" wrap-count="180" position="-.95 .03 .56" rotation="-90 0 0" ></a-text>
+            <a-text value="1978" color="white" width="5" wrap-count="180" position="-.95 .03 .48" rotation="-90 0 0" ></a-text>
+            <a-text value="1980" color="white" width="5" wrap-count="180" position="-.95 .03 .42" rotation="-90 0 0" ></a-text>
+            <a-text value="1982" color="white" width="5" wrap-count="180" position="-.95 .03 .34" rotation="-90 0 0" ></a-text>
+            <a-text value="1984" color="white" width="5" wrap-count="180" position="-.95 .03 .26" rotation="-90 0 0" ></a-text>
+            <a-text value="1986" color="white" width="5" wrap-count="180" position="-.95 .03 .18" rotation="-90 0 0" ></a-text>
+            <a-text value="1988" color="white" width="5" wrap-count="180" position="-.95 .03 .1" rotation="-90 0 0" ></a-text>
+            <a-text value="1990" color="white" width="5" wrap-count="180" position="-.95 .03 .02" rotation="-90 0 0" ></a-text>
+            <a-text value="1992" color="white" width="5" wrap-count="180" position="-.95 .03 -.06" rotation="-90 0 0" ></a-text>
+            <a-text value="1994" color="white" width="5" wrap-count="180" position="-.95 .03 -.14" rotation="-90 0 0" ></a-text>
+            <a-text value="1996" color="white" width="5" wrap-count="180" position="-.95 .03 -.22" rotation="-90 0 0" ></a-text>
+            <a-text value="1998" color="white" width="5" wrap-count="180" position="-.95 .03 -.3" rotation="-90 0 0" ></a-text>
+            <a-text value="2000" color="white" width="5" wrap-count="180" position="-.95 .03 -.38" rotation="-90 0 0" ></a-text>
+            <a-text value="2002" color="white" width="5" wrap-count="180" position="-.95 .03 -.46" rotation="-90 0 0" ></a-text>
+            <a-text value="2004" color="white" width="5" wrap-count="180" position="-.95 .03 -.54" rotation="-90 0 0" ></a-text>
+            <a-text value="2006" color="white" width="5" wrap-count="180" position="-.95 .03 -.62" rotation="-90 0 0" ></a-text>
+            <a-text value="2008" color="white" width="5" wrap-count="180" position="-.95 .03 -.7" rotation="-90 0 0" ></a-text>
+            <a-text value="2010" color="white" width="5" wrap-count="180" position="-.95 .03 -.8" rotation="-90 0 0" ></a-text>
+            <a-text value="Academic Year" color="white"  width="5" wrap-count="180"  position="-1.1 .03 .19" rotation="-90 90 0" ></a-text>
+          </a-entity>
+
+          <!-- Le sol et la bordure -->
+          <a-entity>
+            <a-box depth="2.3" height=".1" width="2.3" opacity="1" color="#333333" position="0 -.02 0"></a-box>
+            <a-box depth="1.6" height=".07" width="1.6" opacity="1" color="white" position="0 0 0"></a-box>
+          </a-entity>
+
+          <!-- La ligne du graphe -->
+          <a-entity id="ligneGraphe"></a-entity>
+
+        </a-entity>
+
+      </a-entity>
+
       <!-- Collider du sol pour empêcher les blocs de tomber -->
       <a-box static-body width=100 height=0.001 depth=100 visible="false"></a-box>
 
+      <!-- Lumière pour la nuit -->
+      <a-entity id="lumiereNuit" lumiere-nuit ></a-entity>
     </a-scene>
 
 </html>
