--- a/test_CSV/index.html
+++ b/test_CSV/index.html
@@ -12,14 +12,14 @@
         <script src="js/lire-csv.js"></script>
         </head>
         <body>
-          <a-scene stats environment="preset:forest;
+          <a-scene stats environment="preset:tron;
                                       shadow:false;skyType:atmosphere;">
             <!-- Graphe avec une ligne -->
-            <a-entity class="graphe" position="0 1 0" scale="0.2 0.2 0.2"
+            <a-entity class="grapheParent" position="0 1 0" scale="0.2 0.2 0.2"
                       grabbable stretchable hoverable>
 
               <!-- le graphe -->
-              <a-entity scale="2 2 2" rotation="0 90 0">
+              <a-entity id="graphe" scale="2 2 2" rotation="0 90 0">
 
                 <!-- Axe Y - Incomes-->
                 <a-entity>
@@ -73,28 +73,61 @@
                 </a-entity>
 
                 <!-- Axe Z - Années -->
-                <a-entity>
-                  <a-text value="1970" color="white" width="5" wrap-count="180" position="-.95 .03 .8" rotation="-90 0 0" ></a-text>
-                  <a-text value="1972" color="white" width="5" wrap-count="180" position="-.95 .03 .72" rotation="-90 0 0" ></a-text>
-                  <a-text value="1974" color="white" width="5" wrap-count="180" position="-.95 .03 .64" rotation="-90 0 0" ></a-text>
-                  <a-text value="1976" color="white" width="5" wrap-count="180" position="-.95 .03 .56" rotation="-90 0 0" ></a-text>
-                  <a-text value="1978" color="white" width="5" wrap-count="180" position="-.95 .03 .48" rotation="-90 0 0" ></a-text>
-                  <a-text value="1980" color="white" width="5" wrap-count="180" position="-.95 .03 .42" rotation="-90 0 0" ></a-text>
-                  <a-text value="1982" color="white" width="5" wrap-count="180" position="-.95 .03 .34" rotation="-90 0 0" ></a-text>
-                  <a-text value="1984" color="white" width="5" wrap-count="180" position="-.95 .03 .26" rotation="-90 0 0" ></a-text>
-                  <a-text value="1986" color="white" width="5" wrap-count="180" position="-.95 .03 .18" rotation="-90 0 0" ></a-text>
-                  <a-text value="1988" color="white" width="5" wrap-count="180" position="-.95 .03 .1" rotation="-90 0 0" ></a-text>
-                  <a-text value="1990" color="white" width="5" wrap-count="180" position="-.95 .03 .02" rotation="-90 0 0" ></a-text>
-                  <a-text value="1992" color="white" width="5" wrap-count="180" position="-.95 .03 -.06" rotation="-90 0 0" ></a-text>
-                  <a-text value="1994" color="white" width="5" wrap-count="180" position="-.95 .03 -.14" rotation="-90 0 0" ></a-text>
-                  <a-text value="1996" color="white" width="5" wrap-count="180" position="-.95 .03 -.22" rotation="-90 0 0" ></a-text>
-                  <a-text value="1998" color="white" width="5" wrap-count="180" position="-.95 .03 -.3" rotation="-90 0 0" ></a-text>
-                  <a-text value="2000" color="white" width="5" wrap-count="180" position="-.95 .03 -.38" rotation="-90 0 0" ></a-text>
-                  <a-text value="2002" color="white" width="5" wrap-count="180" position="-.95 .03 -.46" rotation="-90 0 0" ></a-text>
-                  <a-text value="2004" color="white" width="5" wrap-count="180" position="-.95 .03 -.54" rotation="-90 0 0" ></a-text>
-                  <a-text value="2006" color="white" width="5" wrap-count="180" position="-.95 .03 -.62" rotation="-90 0 0" ></a-text>
-                  <a-text value="2008" color="white" width="5" wrap-count="180" position="-.95 .03 -.7" rotation="-90 0 0" ></a-text>
-                  <a-text value="2010" color="white" width="5" wrap-count="180" position="-.95 .03 -.8" rotation="-90 0 0" ></a-text>
+                <a-entity position="0 0 0.9">
+                  <a-text value="1914" color="white" width="5" wrap-count="180" position="-.95 .03 -0.1" rotation="-90 0 0" ></a-text>
+                  <a-text value="1916" color="white" width="5" wrap-count="180" position="-.95 .03 -0.2" rotation="-90 0 0" ></a-text>
+                  <a-text value="1918" color="white" width="5" wrap-count="180" position="-.95 .03 -0.3" rotation="-90 0 0" ></a-text>
+                  <a-text value="1920" color="white" width="5" wrap-count="180" position="-.95 .03 -0.4" rotation="-90 0 0" ></a-text>
+                  <a-text value="1922" color="white" width="5" wrap-count="180" position="-.95 .03 -0.5" rotation="-90 0 0" ></a-text>
+                  <a-text value="1924" color="white" width="5" wrap-count="180" position="-.95 .03 -0.6" rotation="-90 0 0" ></a-text>
+                  <a-text value="1926" color="white" width="5" wrap-count="180" position="-.95 .03 -0.7" rotation="-90 0 0" ></a-text>
+                  <a-text value="1928" color="white" width="5" wrap-count="180" position="-.95 .03 -0.8" rotation="-90 0 0" ></a-text>
+                  <a-text value="1930" color="white" width="5" wrap-count="180" position="-.95 .03 -0.9" rotation="-90 0 0" ></a-text>
+                  <a-text value="1932" color="white" width="5" wrap-count="180" position="-.95 .03 -1" rotation="-90 0 0" ></a-text>
+                  <a-text value="1934" color="white" width="5" wrap-count="180" position="-.95 .03 -1.1" rotation="-90 0 0" ></a-text>
+                  <a-text value="1936" color="white" width="5" wrap-count="180" position="-.95 .03 -1.2" rotation="-90 0 0" ></a-text>
+                  <a-text value="1938" color="white" width="5" wrap-count="180" position="-.95 .03 -1.3" rotation="-90 0 0" ></a-text>
+                  <a-text value="1940" color="white" width="5" wrap-count="180" position="-.95 .03 -1.4" rotation="-90 0 0" ></a-text>
+                  <a-text value="1942" color="white" width="5" wrap-count="180" position="-.95 .03 -1.5" rotation="-90 0 0" ></a-text>
+                  <a-text value="1944" color="white" width="5" wrap-count="180" position="-.95 .03 -1.6" rotation="-90 0 0" ></a-text>
+                  <a-text value="1946" color="white" width="5" wrap-count="180" position="-.95 .03 -1.7" rotation="-90 0 0" ></a-text>
+                  <a-text value="1948" color="white" width="5" wrap-count="180" position="-.95 .03 -1.8" rotation="-90 0 0" ></a-text>
+                  <a-text value="1950" color="white" width="5" wrap-count="180" position="-.95 .03 -1.9" rotation="-90 0 0" ></a-text>
+                  <a-text value="1952" color="white" width="5" wrap-count="180" position="-.95 .03 -2" rotation="-90 0 0" ></a-text>
+                  <a-text value="1954" color="white" width="5" wrap-count="180" position="-.95 .03 -2.1" rotation="-90 0 0" ></a-text>
+                  <a-text value="1956" color="white" width="5" wrap-count="180" position="-.95 .03 -2.2" rotation="-90 0 0" ></a-text>
+                  <a-text value="1958" color="white" width="5" wrap-count="180" position="-.95 .03 -2.3" rotation="-90 0 0" ></a-text>
+                  <a-text value="1960" color="white" width="5" wrap-count="180" position="-.95 .03 -2.4" rotation="-90 0 0" ></a-text>
+                  <a-text value="1962" color="white" width="5" wrap-count="180" position="-.95 .03 -2.5" rotation="-90 0 0" ></a-text>
+                  <a-text value="1964" color="white" width="5" wrap-count="180" position="-.95 .03 -2.6" rotation="-90 0 0" ></a-text>
+                  <a-text value="1966" color="white" width="5" wrap-count="180" position="-.95 .03 -2.7" rotation="-90 0 0" ></a-text>
+                  <a-text value="1968" color="white" width="5" wrap-count="180" position="-.95 .03 -2.8" rotation="-90 0 0" ></a-text>
+                  <a-text value="1970" color="white" width="5" wrap-count="180" position="-.95 .03 -2.9"rotation="-90 0 0" ></a-text>
+                  <a-text value="1972" color="white" width="5" wrap-count="180" position="-.95 .03 -3" rotation="-90 0 0" ></a-text>
+                  <a-text value="1974" color="white" width="5" wrap-count="180" position="-.95 .03 -3.1" rotation="-90 0 0" ></a-text>
+                  <a-text value="1976" color="white" width="5" wrap-count="180" position="-.95 .03 -3.2" rotation="-90 0 0" ></a-text>
+                  <a-text value="1978" color="white" width="5" wrap-count="180" position="-.95 .03 -3.3" rotation="-90 0 0" ></a-text>
+                  <a-text value="1980" color="white" width="5" wrap-count="180" position="-.95 .03 -3.4" rotation="-90 0 0" ></a-text>
+                  <a-text value="1982" color="white" width="5" wrap-count="180" position="-.95 .03 -3.5" rotation="-90 0 0" ></a-text>
+                  <a-text value="1984" color="white" width="5" wrap-count="180" position="-.95 .03 -3.6" rotation="-90 0 0" ></a-text>
+                  <a-text value="1986" color="white" width="5" wrap-count="180" position="-.95 .03 -3.7" rotation="-90 0 0" ></a-text>
+                  <a-text value="1988" color="white" width="5" wrap-count="180" position="-.95 .03 -3.8" rotation="-90 0 0" ></a-text>
+                  <a-text value="1990" color="white" width="5" wrap-count="180" position="-.95 .03 -3.9" rotation="-90 0 0" ></a-text>
+                  <a-text value="1992" color="white" width="5" wrap-count="180" position="-.95 .03 -4" rotation="-90 0 0" ></a-text>
+                  <a-text value="1994" color="white" width="5" wrap-count="180" position="-.95 .03 -4.1" rotation="-90 0 0" ></a-text>
+                  <a-text value="1996" color="white" width="5" wrap-count="180" position="-.95 .03 -4.2" rotation="-90 0 0" ></a-text>
+                  <a-text value="1998" color="white" width="5" wrap-count="180" position="-.95 .03 -4.3" rotation="-90 0 0" ></a-text>
+                  <a-text value="2000" color="white" width="5" wrap-count="180" position="-.95 .03 -4.4" rotation="-90 0 0" ></a-text>
+                  <a-text value="2002" color="white" width="5" wrap-count="180" position="-.95 .03 -4.5" rotation="-90 0 0" ></a-text>
+                  <a-text value="2004" color="white" width="5" wrap-count="180" position="-.95 .03 -4.6" rotation="-90 0 0" ></a-text>
+                  <a-text value="2006" color="white" width="5" wrap-count="180" position="-.95 .03 -4.7" rotation="-90 0 0" ></a-text>
+                  <a-text value="2008" color="white" width="5" wrap-count="180" position="-.95 .03 -4.8" rotation="-90 0 0" ></a-text>
+                  <a-text value="2010" color="white" width="5" wrap-count="180" position="-.95 .03 -4.9" rotation="-90 0 0" ></a-text>
+                  <a-text value="2011" color="white" width="5" wrap-count="180" position="-.95 .03 -5" rotation="-90 0 0" ></a-text>
+                  <a-text value="2012" color="white" width="5" wrap-count="180" position="-.95 .03 -5.1" rotation="-90 0 0" ></a-text>
+                  <a-text value="2013" color="white" width="5" wrap-count="180" position="-.95 .03 -5.2" rotation="-90 0 0" ></a-text>
+                  <a-text value="2014" color="white" width="5" wrap-count="180" position="-.95 .03 -5.3" rotation="-90 0 0" ></a-text>
+                  <a-text value="2015" color="white" width="5" wrap-count="180" position="-.95 .03 -5.4" rotation="-90 0 0" ></a-text>
                   <a-text align="center" value="Years" color="white"  width="5" wrap-count="180"  position="-1.1 .03 0" rotation="-90 90 0" ></a-text>
                 </a-entity>
 
@@ -150,20 +183,12 @@
                 </a-entity>
 
                 <!-- Le sol et la bordure -->
-                <a-entity class="solGraphe" static-body  >
-                  <a-box depth="2.3" height=".1" width="2.3" opacity="1" color="#333333" position="0 -.02 0" event-set__hover-start="material.opacity: 0.4;"
+                <a-entity class="solGraphe" static-body position="1.87 0 0">
+                  <a-box depth="6.04" height=".1" width="6.04" opacity="1" color="#333333" position="0 -.02 -1.867" event-set__hover-start="material.opacity: 0.4;"
                   event-set__hover-end="material.opacity:1;"></a-box>
-                  <a-box depth="1.6" height=".07" width="1.6" opacity="1" color="white" position="0 0 0"></a-box>
+                  <a-box depth="5.34" height=".07" width="5.34" opacity="1" color="white" position="0 0 -1.867"></a-box>
                 </a-entity>
 
-                <!-- La ligne du graphe -->
-                <a-entity class="ligneGraphe"></a-entity>
-                <!-- La ligne du graphe -->
-                <a-entity class="ligneGraphe"></a-entity>
-                <!-- La ligne du graphe -->
-                <a-entity class="ligneGraphe"></a-entity>
-                <!-- La ligne du graphe -->
-                <a-entity class="ligneGraphe"></a-entity>
               </a-entity>
             </a-entity>
           </a-scene>
