--- a/test_CSV/index.html
+++ b/test_CSV/index.html
@@ -4,8 +4,9 @@
     		<meta charset="UTF-8" />
     		<meta name="viewport" content="width=device-width  initial-scale=1.0">
     		<title>Test CSV A-frame </title>
-    		<meta name="description" content="Reading csv file using javascript" />
-    		<meta name="author" content="Niko Girardelli"/>
+        <meta name="description" content="Reading csv file using javascript" />
+        <meta name="author" content="Niko Girardelli"/>
+        <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.js"></script>
         <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
         <script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
         <script src="js/papaparse.min.js"></script>
@@ -14,6 +15,19 @@
         <body>
           <a-scene stats environment="preset:tron;
                                       shadow:false;skyType:atmosphere;">
+
+            <!-- Les mains -->
+            <a-entity id="player" rafraichissement
+                      progressive-controls="controllerModel:false;override:true;
+                                            maxLevel:point;touchMixin:mytouch;
+                                            pointMixin:mypoint;">
+              <a-entity id="lhand" hand-controls="left"
+                        teleport-controls="type:parabolic;"></a-entity>
+              <a-entity id="rhand" hand-controls="right"
+                         changement-outil>
+              </a-entity>
+            </a-entity>
+
             <!-- Graphe avec une ligne -->
             <a-entity class="grapheParent" position="0 1 0" scale="0.2 0.2 0.2"
                       grabbable stretchable hoverable>
@@ -132,16 +146,49 @@
                 </a-entity>
 
                 <!-- Axe X - Life Expectency -->
-                <a-entity rotation="0 270 0" position="0 0 1.78">
-                  <a-text value="20" color="white" width="5" wrap-count="180" position="-.95 .03 0.7" rotation="-90 0 0" ></a-text>
-                  <a-text value="30" color="white" width="5" wrap-count="180" position="-.95 .03 .5" rotation="-90 0 0" ></a-text>
-                  <a-text value="40" color="white" width="5" wrap-count="180" position="-.95 .03 .3" rotation="-90 0 0" ></a-text>
-                  <a-text value="50" color="white" width="5" wrap-count="180" position="-.95 .03 .1" rotation="-90 0 0" ></a-text>
-                  <a-text value="70" color="white" width="5" wrap-count="180" position="-.95 .03 -.1" rotation="-90 0 0" ></a-text>
-                  <a-text value="80" color="white" width="5" wrap-count="180" position="-.95 .03 -.3" rotation="-90 0 0" ></a-text>
-                  <a-text value="90" color="white" width="5" wrap-count="180" position="-.95 .03 -.5" rotation="-90 0 0" ></a-text>
-                    <a-text value="100" color="white" width="5" wrap-count="180" position="-.95 .03 -.7" rotation="-90 0 0" ></a-text>
-                  <a-text align="center" value="Life Expectency" color="white"  width="5" wrap-count="180"  position="-0.7 .03 0" rotation="-90 90 0" ></a-text>
+                <a-entity rotation="0 270 0" position="-0.9 0 1.78">
+                  <a-text value="20" color="white" width="5" wrap-count="180" position="-.95 .03 -0.1" rotation="-90 0 0" ></a-text>
+                  <a-text value="22" color="white" width="5" wrap-count="180" position="-.95 .03 -0.2" rotation="-90 0 0" ></a-text>
+                  <a-text value="24" color="white" width="5" wrap-count="180" position="-.95 .03 -0.3" rotation="-90 0 0" ></a-text>
+                  <a-text value="26" color="white" width="5" wrap-count="180" position="-.95 .03 -0.4" rotation="-90 0 0" ></a-text>
+                  <a-text value="28" color="white" width="5" wrap-count="180" position="-.95 .03 -0.5" rotation="-90 0 0" ></a-text>
+                  <a-text value="30" color="white" width="5" wrap-count="180" position="-.95 .03 -0.6" rotation="-90 0 0" ></a-text>
+                  <a-text value="32" color="white" width="5" wrap-count="180" position="-.95 .03 -0.7" rotation="-90 0 0" ></a-text>
+                  <a-text value="34" color="white" width="5" wrap-count="180" position="-.95 .03 -0.8" rotation="-90 0 0" ></a-text>
+                  <a-text value="36" color="white" width="5" wrap-count="180" position="-.95 .03 -0.9" rotation="-90 0 0" ></a-text>
+                  <a-text value="38" color="white" width="5" wrap-count="180" position="-.95 .03 -1" rotation="-90 0 0" ></a-text>
+                  <a-text value="40" color="white" width="5" wrap-count="180" position="-.95 .03 -1.1" rotation="-90 0 0" ></a-text>
+                  <a-text value="42" color="white" width="5" wrap-count="180" position="-.95 .03 -1.2" rotation="-90 0 0" ></a-text>
+                  <a-text value="44" color="white" width="5" wrap-count="180" position="-.95 .03 -1.3" rotation="-90 0 0" ></a-text>
+                  <a-text value="46" color="white" width="5" wrap-count="180" position="-.95 .03 -1.4" rotation="-90 0 0" ></a-text>
+                  <a-text value="48" color="white" width="5" wrap-count="180" position="-.95 .03 -1.5" rotation="-90 0 0" ></a-text>
+                  <a-text value="50" color="white" width="5" wrap-count="180" position="-.95 .03 -1.6" rotation="-90 0 0" ></a-text>
+                  <a-text value="52" color="white" width="5" wrap-count="180" position="-.95 .03 -1.7" rotation="-90 0 0" ></a-text>
+                  <a-text value="54" color="white" width="5" wrap-count="180" position="-.95 .03 -1.8" rotation="-90 0 0" ></a-text>
+                  <a-text value="56" color="white" width="5" wrap-count="180" position="-.95 .03 -1.9" rotation="-90 0 0" ></a-text>
+                  <a-text value="58" color="white" width="5" wrap-count="180" position="-.95 .03 -2" rotation="-90 0 0" ></a-text>
+                  <a-text value="60" color="white" width="5" wrap-count="180" position="-.95 .03 -2.1" rotation="-90 0 0" ></a-text>
+                  <a-text value="62" color="white" width="5" wrap-count="180" position="-.95 .03 -2.2" rotation="-90 0 0" ></a-text>
+                  <a-text value="64" color="white" width="5" wrap-count="180" position="-.95 .03 -2.3" rotation="-90 0 0" ></a-text>
+                  <a-text value="66" color="white" width="5" wrap-count="180" position="-.95 .03 -2.4" rotation="-90 0 0" ></a-text>
+                  <a-text value="68" color="white" width="5" wrap-count="180" position="-.95 .03 -2.5" rotation="-90 0 0" ></a-text>
+                  <a-text value="70" color="white" width="5" wrap-count="180" position="-.95 .03 -2.6" rotation="-90 0 0" ></a-text>
+                  <a-text value="72" color="white" width="5" wrap-count="180" position="-.95 .03 -2.7" rotation="-90 0 0" ></a-text>
+                  <a-text value="74" color="white" width="5" wrap-count="180" position="-.95 .03 -2.8" rotation="-90 0 0" ></a-text>
+                  <a-text value="76" color="white" width="5" wrap-count="180" position="-.95 .03 -2.9" rotation="-90 0 0" ></a-text>
+                  <a-text value="78" color="white" width="5" wrap-count="180" position="-.95 .03 -3" rotation="-90 0 0" ></a-text>
+                  <a-text value="80" color="white" width="5" wrap-count="180" position="-.95 .03 -3.1" rotation="-90 0 0" ></a-text>
+                  <a-text value="82" color="white" width="5" wrap-count="180" position="-.95 .03 -3.2" rotation="-90 0 0" ></a-text>
+                  <a-text value="84" color="white" width="5" wrap-count="180" position="-.95 .03 -3.3" rotation="-90 0 0" ></a-text>
+                  <a-text value="86" color="white" width="5" wrap-count="180" position="-.95 .03 -3.4" rotation="-90 0 0" ></a-text>
+                  <a-text value="88" color="white" width="5" wrap-count="180" position="-.95 .03 -3.5" rotation="-90 0 0" ></a-text>
+                  <a-text value="90" color="white" width="5" wrap-count="180" position="-.95 .03 -3.6" rotation="-90 0 0" ></a-text>
+                  <a-text value="92" color="white" width="5" wrap-count="180" position="-.95 .03 -3.7" rotation="-90 0 0" ></a-text>
+                  <a-text value="94" color="white" width="5" wrap-count="180" position="-.95 .03 -3.8" rotation="-90 0 0" ></a-text>
+                  <a-text value="96" color="white" width="5" wrap-count="180" position="-.95 .03 -3.9" rotation="-90 0 0" ></a-text>
+                  <a-text value="98" color="white" width="5" wrap-count="180" position="-.95 .03 -4" rotation="-90 0 0" ></a-text>
+                  <a-text value="100" color="white" width="5" wrap-count="180" position="-.95 .03 -4.1" rotation="-90 0 0" ></a-text>
+                  <a-text align="center" value="Life Expectency" color="white"  width="5" wrap-count="180"  position="-0.7 .03 -2.05" rotation="-90 90 0" ></a-text>
                 </a-entity>
 
                 <!-- Ligne noir au sol -->
