Suppression du laser de la main.

--- a/prototypes/prototype_01-26/index.html
+++ b/prototypes/prototype_01-26/index.html
@@ -96,7 +96,7 @@
                                      teleportOrigin: #head;
                                      type:parabolic;"
                                      hand-controls="left"></a-entity>
-        <a-entity id="right-hand" hand-controls="right" controller-cursor></a-entity>
+        <a-entity id="right-hand" hand-controls="right"></a-entity>
       </a-entity>
 
       <!-- Selecteur jour -->
